--- a/build.gradle
+++ b/build.gradle
@@ -43,4 +43,6 @@ dependencies {
 
     testImplementation('org.springframework.boot:spring-boot-starter-test')
     testImplementation("org.springframework.security:spring-security-test") // 권한 관련
+
+    implementation('org.mariadb.jdbc:mariadb-java-client')
 }
